# ParallelComputations

./: .gitmodules
10/: CMakeLists.txt  main.cpp  run.sh
11/: CMakeLists.txt  main.cpp
12/: main.cpp
13/: CMakeLists.txt  main.cpp
14/: CMakeLists.txt  main.cpp  run.sh
15/: CMakeLists.txt  main.cpp
4/: main.cpp
5/: main.cpp
6/: main.cpp
7/: CMakeLists.txt  main.cpp
8/: main.cpp
9/: .gitignore  CMakeLists.txt  main.cpp
template/: main.cpp
